[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AK_SSL"
version = "0.2.1"
description = "A Self-Supervised Learning Library"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
authors = [
  { name = "Audrina Ebrahimi", email = "audrina_ebrahimi@outlook.com" },
  { name = "Kian Majlessi" }
]
requires-python = ">=3.10"
keywords = ["self-supervised learning", "contrastive learning", "computer vision", "multimodal", "representation learning", "pytorch"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Image Processing",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License"
]
# Dependencies pulled from requirements.txt (unpinned). Consider pinning or version ranges for stability.
dependencies = [
  "numpy",
  "torch",
  "torchvision",
  "torcheval",
  "tqdm",
  "tensorboard",
  "wandb",
  "einops",
  "axial_positional_embedding",
  "Pillow",
  "transformers",
  "wandb"
]

[project.urls]
Homepage = "https://github.com/audrina-ebrahimi/AK_SSL"
Repository = "https://github.com/audrina-ebrahimi/AK_SSL.git"
Issues = "https://github.com/audrina-ebrahimi/AK_SSL/issues"

[tool.setuptools.packages.find]
include = ["AK_SSL*"]
